<resources>
    <string name="app_name">SafeIdentity</string>
    <string name="login_activity">Login Activity</string>
    <string name="main_activity">SafeIdentity Sample</string>
    <string name="webview_activity">웹 SSO</string>
    <string name="webview_test_activity">웹뷰 테스트</string>
    <string name="api_test_activity">API 테스트</string>
    <string name="sso_api_test_activity">API 테스트</string>
    <string name="list_view_activity">API 리스트</string>
    <string name="getUUID_activity">GetUUID Activity</string>
    <string name="action_settings">Settings</string>
    <string name="userId">사용자 ID</string>
    <string name="userPwd">패스워드</string>
    <string name="exp_login">Express Login</string>
    <string name="std_login">Standard Login</string>
    <string name="ent_login">Enterprise Login</string>
    <string name="logout">로그아웃</string>
    <string name="tag_name">태그명, 사용자ID</string>
    <string name="tag_value">태그값, 패스워드</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="webview_test">웹뷰 테스트</string>
    <string name="set_token">Set Token</string>
</resources>
